# libutils

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  libutils.cscope_file_list  libutils.layout
include/fs/: CFile.hpp  DirList.h  FSUtils.h  disc_io.h
include/network/: net.h
include/system/: AsyncDeleter.h  CMutex.h  CThread.h  memory.h
include/utils/: StringTools.h  TCPServer.hpp  elf_utils.h  utils.h
other/: devkitPPCupdatePPCr29.pl
source/fs/: DirList.cpp  DirList.h  FSUtils.cpp  FSUtils.h  sd_fat_devoptab.cpp
source/kernel/: kernel_defs.h  kernel_functions.c  kernel_functions.h  syscalls.c  syscalls.h
source/system/: AsyncDeleter.cpp  CThread.h
source/utils/: TCPServer.cpp  function_patcher.cpp  function_patcher.h  logger.h  utils.c  utils.h
src/fs/: CFile.cpp  DirList.cpp  FSUtils.cpp
src/language/: gettext.cpp
src/network/: net.c
src/system/: AsyncDeleter.cpp  memory.c
src/utils/: StringTools.cpp  TCPServer.cpp  elf_utils.cpp  logger.c
